fixed menu button

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.8/js/all.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Oswald|Open+Sans" rel="stylesheet">
-    <title>Document</title>
+    <title>Tech Test</title>
 </head>
 <body>
     <header>   
@@ -15,7 +15,7 @@
             <nav>
                 <div class="wrapper clearfix">
                     <div class="toggle">
-                        <i class="fas fa-bars button" aria-hidden="true"></i>
+                        <i class="fas fa-bars toggle" aria-hidden="true"></i>
                     </div>
                     <div class="clearfix slider">
                         <i class="fas fa-sliders-h"></i>
